Active link css

--- a/src/Division/Header/Header.module.scss
+++ b/src/Division/Header/Header.module.scss
@@ -9,17 +9,17 @@
     padding:15px;
     font-family: "Times New Roman", serif;
     font-size:20px;
-    div{
-        color:white;
-    }
+
     .menu{
         display:flex;
         gap:20px;
-        div{
-            color:white;
-        }
-
     }
+
+
+
 }
 
 
+.active{
+    color:blue;
+}
